--- a/src/main/resources/templates/layouts/fragments.html
+++ b/src/main/resources/templates/layouts/fragments.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
 
     <meta charset="utf-8">
@@ -24,6 +25,7 @@
     <script th:src="@{/js/jquery.min.js}" src="../static/js/jquery.min.js"></script>
     <script th:src="@{/js/bootstrap.bundle.min.js}" src="../static/js/bootstrap.bundle.min.js"></script>
     <script th:src="@{/js/bootstrap.min.js}" src="../static/js/bootstrap.min.js"></script>
+    <script th:src="@{/js/main.js}" src="../static/js/main.js"></script>
 
 </head>
 <body>
@@ -50,6 +52,9 @@
                     <a class="nav-link js-scroll-trigger" href="#contact">UnpaidBill</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#contact">CancelRequest</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger text-danger" href="#contact">LogOut</a>
                 </li>
             </ul>
@@ -57,6 +62,116 @@
     </div>
 </nav>
 
+<!-- billInfoModal -->
+<div th:fragment="billInfoModal" class="modal fade" id="billInfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-info" id="exampleModalLabel">Bill Information</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="readOne" method="post">
+                    <div class="form-group">
+                        <label class="text-dark">Bill Number:</label>
+                        <input type="text" class="form-control" name="billNumber" placeholder="Enter billNumber">
+                    </div>
+
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<h1  class="container">sdfsdfsd</h1>
+<!-- BillPayModal -->
+<div th:fragment="BillPayModal" class="modal fade" id="billPay" tabindex="-1" role="dialog" aria-labelledby="billPayModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-info" id="billPayModalLabel">Bill Pay</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="pay" method="post">
+                    <div class="form-group">
+                        <label class="text-dark" >Bill Number:</label>
+                        <input type="text" class="form-control" name="billNumber" placeholder="Enter billNumber">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-dark">Amount:</label>
+                        <input type="text" class="form-control" name="paidAmount" placeholder="Enter Amount here..">
+                    </div>
+
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!-- billInfoModal -->
+<div th:fragment="unpaidBillModal" class="modal fade" id="unpaidList" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-info" id="unpaidBillModalLabel">Unpaid Bill Information</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="unpaidList" method="post">
+                    <div class="form-group">
+                        <label class="text-dark">Customer Number:</label>
+                        <input type="text" class="form-control" name="customerNumber" placeholder="Enter customerNumber here">
+                    </div>
+
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!-- BillPayModal -->
+<div th:fragment="payModal" class="modal fade" id="pay" tabindex="-1" role="dialog" aria-labelledby="billPayModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-info" id="payModalLabel">Bill Pay</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="pay" method="post">
+                    <div class="form-group">
+                        <label class="text-dark" >Bill Number:</label>
+                        <input type="text" class="form-control" name="billNumber" placeholder="Enter billNumber">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-dark">Amount:</label>
+                        <input type="text" class="form-control" name="paidAmount" placeholder="Enter Amount here..">
+                    </div>
+
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 
 </body>
