--- a/src/main/resources/templates/single_bill_info.html
+++ b/src/main/resources/templates/single_bill_info.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layouts/fragments :: head"></head>
 <body>
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Bill Pay Online</a>
+        <a class="navbar-brand js-scroll-trigger" href="/home">Bill Pay Online</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -16,13 +17,13 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger btn" data-toggle="modal"
-                       data-target="#exampleModal">BillInfo</a>
+                       data-target="#billInfo">BillInfo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger btn" data-toggle="modal" data-target="#billPay">BillPay</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">UnpaidBill</a>
+                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal" data-target="#unpaidList">UnpaidBill</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger text-danger" href="#contact">LogOut</a>
@@ -42,8 +43,8 @@
                     <div class=" table-responsive table-hover"
                          style=" max-height: 45%; overflow-y: auto">
 
-                        <table class="table" th:if="${billInfo != null}">
-                            <thead>
+                        <table class="table table-striped " th:if="${billInfo != null}">
+                            <thead class="">
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Type</th>
@@ -133,55 +134,12 @@
     </div>
 </header>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title text-info" id="exampleModalLabel">Bill Information</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form action="readOne" method="post">
-                    <div class="form-group">
-                        <label class="text-dark">Bill Number:</label>
-                        <input type="text" class="form-control" name="billNumber" placeholder="Enter billNumber">
-                    </div>
-
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-            </div>
-
-        </div>
-    </div>
-</div>
-
+<!--billInfoModal-->
+<div th:replace="layouts/fragments :: billInfoModal"></div>
 <!-- BillPayModal -->
-<div class="modal fade" id="billPay" tabindex="-1" role="dialog" aria-labelledby="billPayModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title text-info" id="billPayModalLabel">Bill Pay</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form action="readOne" method="post">
-                    <div class="form-group">
-                        <label class="text-dark" >Bill Number:</label>
-                        <input type="text" class="form-control" name="billNumber" placeholder="Enter billNumber">
-                    </div>
+<div th:replace="layouts/fragments :: BillPayModal"></div>
+<!-- UnpaidBillPayModal -->
+<div th:replace="layouts/fragments :: unpaidBillModal"></div>
 
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-            </div>
-
-        </div>
-    </div>
-</div>
 </body>
 </html>
