--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,35 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layouts/fragments :: head"></head>
 <body>
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="/home">Bill Pay Online</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-            Menu
-            <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal" data-target="#billInfo" >BillInfo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal" data-target="#billPay">BillPay</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal" data-target="#unpaidList">UnpaidBill</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger text-danger" href="#contact">LogOut</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<nav th:replace="layouts/fragments :: navigation"></nav>
 
     <!-- Intro Header -->
     <header class="masthead">
