--- a/src/main/resources/templates/single_bill_info.html
+++ b/src/main/resources/templates/single_bill_info.html
@@ -4,46 +4,19 @@
 <head th:replace="layouts/fragments :: head"></head>
 <body>
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="/home">Bill Pay Online</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-            Menu
-            <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal"
-                       data-target="#billInfo">BillInfo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal" data-target="#billPay">BillPay</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal" data-target="#unpaidList">UnpaidBill</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger text-danger" href="#contact">LogOut</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<nav th:replace="layouts/fragments :: navigation"></nav>
 
 <!-- Intro Header -->
 <header class="masthead">
     <div class="intro-body">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 mx-auto">
+                <div class="col-lg-7 mx-auto" th:if="${billInfo != null}">
                     <h1 style="margin-top: 15%;">Bill Information</h1>
                     <div class=" table-responsive table-hover"
                          style=" max-height: 45%; overflow-y: auto">
 
-                        <table class="table table-striped " th:if="${billInfo != null}">
+                        <table class="table table-striped ">
                             <thead class="">
                             <tr>
                                 <th scope="col">#</th>
@@ -124,10 +97,11 @@
                             </tr>
                             </tbody>
                         </table>
-                        <div th:unless="${billInfo}">
-                            <h5>No record found please check your Bill Number</h5>
-                        </div>
+
                     </div>
+                </div>
+                <div th:unless="${billInfo}" class="container">
+                    <h5>No record found please check your Bill Number</h5>
                 </div>
             </div>
         </div>
