--- a/src/main/resources/templates/unpaid_list.html
+++ b/src/main/resources/templates/unpaid_list.html
@@ -4,40 +4,11 @@
 <head th:replace="layouts/fragments :: head"></head>
 <body>
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="/home">Bill Pay Online</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-            Menu
-            <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal"
-                       data-target="#billInfo">BillInfo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal" data-target="#billPay">BillPay</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger btn" data-toggle="modal"
-                       data-target="#unpaidList">UnpaidBill</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger text-danger" href="#contact">LogOut</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+<nav th:replace="layouts/fragments :: navigation"></nav>
 <!-- Intro Header -->
 <header class="masthead">
     <div class="intro-body">
-        <div class="container">
+        <div class="container" >
             <h1>Unpaid Bill List</h1>
 
             <div class="table-responsive">
@@ -87,8 +58,6 @@
                     </tbody>
                 </table>
             </div>
-
-
         </div>
     </div>
     </div>
@@ -119,7 +88,7 @@
                         </div>
                         <div class="form-group">
                             <label for="paidAmount" class="col-form-label text-dark">Amount:</label>
-                            <input type="text" class="form-control" id="paidAmount" name="paidAmount" placeholder="Enter amount here..."/>
+                            <input type="number" step="0.01" class="form-control" id="paidAmount" name="paidAmount" placeholder="Enter amount here..."/>
                         </div>
                     </div>
                     <div class="modal-footer">
